--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,14 @@
 /MANIFEST
 /site
 
+# Python-related
+__pycache__
+/venv
+
+# Code editors
+/.idea
+/.vscode
+
 # Distribution files
 /dist
-/mkdocs_material.egg-info
+/mkdocs_ponylang.egg-info
