--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mkdocs-material",
-  "version": "2.7.1",
-  "description": "A Material Design theme for MkDocs",
+  "name": "mkdocs-ponylang",
+  "version": "0.1.0",
+  "description": "Ponylang theme for MkDocs",
   "keywords": [
     "mkdocs",
     "documentation",
@@ -54,6 +54,7 @@
     "fastclick": "^1.0.6",
     "file-loader": "^1.1.5",
     "git-hooks": "^1.1.8",
+    "highlight.js": "^9.12.0",
     "html-minifier": "^3.5.6",
     "imagemin-webpack-plugin": "^2.0.0",
     "js-cookie": "^2.1.4",
