Setup PyPI package
Rename to `mkdocs-ponylang-material` and configure files

--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "mkdocs-ponylang",
+  "name": "mkdocs-ponylang-material",
   "version": "0.1.0",
-  "description": "Ponylang theme for MkDocs",
+  "description": "MkDocs theme for Ponylang",
   "keywords": [
     "mkdocs",
     "documentation",
-    "theme"
+    "theme",
+    "ponylang"
   ],
-  "homepage": "https://squidfunk.github.io/mkdocs-material/",
+  "homepage": "https://github.com/epiceric/ponylang-mkdocs-theme",
   "bugs": {
-    "url": "https://github.com/squidfunk/mkdocs-material/issues",
-    "email": "martin.donath@squidfunk.com"
+    "url": "https://github.com/epiceric/ponylang-mkdocs-theme",
+    "email": "ericpires9@gmail.com"
   },
   "license": "MIT",
   "author": {
-    "name": "Martin Donath",
-    "email": "martin.donath@squidfunk.com"
+    "name": "Eric Rodrigues Pires",
+    "email": "ericpires9@gmail.com"
   },
   "contributors": [],
   "repository": {
     "type": "git",
-    "url": "https://github.com/squidfunk/mkdocs-material.git"
+    "url": "https://github.com/epiceric/ponylang-mkdocs-theme.git"
   },
   "scripts": {
     "build": "make clean build",
