--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,9 @@ mkdocs>=0.17.1
 Pygments>=2.2
 pymdown-extensions>=3.4
 
+# Markdown description support in Warehouse
+setuptools>=38.6.0
+
 # PyPI publishing
 twine>=1.11.0
 wheel>=0.31.0
