--- a/.stylelintrc
+++ b/.stylelintrc
@@ -182,7 +182,7 @@
       "z-index"
     ],
     "property-no-vendor-prefix": true,
-    "selector-class-pattern": "^[a-z0-9]+(-[a-z0-9]+)*(__[a-z]+)?(--[a-z]+)?$",
+    "selector-class-pattern": "^[a-z0-9]+((-|_)[a-z0-9]+)*(__[a-z]+)?(--[a-z]+)?$",
     "selector-descendant-combinator-no-non-space": null,
     "string-quotes": "double",
     "unit-whitelist": ["rem", "em", "deg", "s", "%", "mm", "vh"],
