--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,6 @@
 # Copyright (c) 2018, The Pony Developers
+#
+# Remember to use the python from the virtualenv you created above.
 # Copyright (c) 2016-2018 Martin Donath <martin.donath@squidfunk.com>
 
 # Permission is hereby granted, free of charge, to any person obtaining a copy
@@ -100,7 +102,7 @@ markdown_extensions:
   - pymdownx.tilde
 
 # Page tree
-pages:
+nav:
   - Material: index.md
   - Getting started: getting-started.md
   - Extensions:
