Change TravisCI notification settings
1- don't send emails
2- send notifications to ponylang IRC channel on change in status of a
build

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,14 @@
 language: node_js
 sudo: false
 
+notifications:
+  email: false
+  irc:
+    channels:
+      - "chat.freenode.net#ponylang"
+    on_success: change
+    on_failure: change
+
 # Node.js version and necessary services
 node_js: 10
 services:
